<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">PlayerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zhandianwangzhi">domain</string>
    <string name="bianhao">number</string>
    <string name="zhandian">account</string>
    <string name="zhandianpassword">pwd</string>
    <string name="roomnickname">nickName</string>
    <string name="roompassword">joinPwd</string>
    <string name="join_reconnecting">网络不给力,重连中...</string>
    <string name="exit">退出</string>
    <string name="webcast_type">webcast</string>
    <string name="training_type">training</string>
    <string name="public_chat">公聊</string>
    <!-- vod -->
    <string name="editvoddomin">请输入站点</string>
    <string name="editvodnumble">请输入编号</string>
    <string name="editvodnicknam">请输入昵称</string>
    <string name="editvodaccount">请输入登录帐号</string>
    <string name="editvodloginpassword">请输入登录密码</string>
    <string name="editvodpassword">请输入点播密码</string>
    <string name="init">init</string>
    <string name="chapter_list_btn">章节列表</string>
    <string name="chapter_title">章节：</string>
    <string name="doc_title">文档：</string>
    <string name="chapter_time">时间：</string>
    <!-- main -->
    <string name="live">直播</string>
    <string name="vod">点播</string>
    <string name="video_close">关闭视频</string>
    <string name="video_open">打开视频</string>
    <string name="audio_close">关闭音频</string>
    <string name="audio_open">打开音频</string>
    <string name="mic_close">停止讲话</string>
    <string name="video_rate_low">低清</string>
    <string name="video_rate_nor">标清</string>
    <string-array name="speeds">
        <item>speed1.00</item>
        <item>speed1.25</item>
        <item>speed1.50</item>
        <item>speed1.75</item>
        <item>speed2.00</item>
        <item>speed2.50</item>
        <item>speed3.00</item>
        <item>speed3.50</item>
        <item>speed4.00</item>
    </string-array>
    <string name="speed_choice">选择播放速度</string>
    <string name="idcSwitch">网络切换</string>
    <string name="reword">打赏</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="help_step1_title">1. 为什么听不到老师的声音？</string>
    <string name="help_step1">第1步：可能老师还没有开启话筒哦！请在聊天区与老师确认话筒是否已开启。
        \n第2步：可能你的手机正处于静音模式哦！请将手机设置为“非静音模式”，建议佩戴耳机，收听效果更佳哦！</string>
    <string name="help_step2_title">2. 视频卡顿怎么解决？</string>
    <string name="help_step2">第1招：建议在WiFi环境下听课，以保证收听效果并节省手机流量。
        \n第2招：退出重新进入听课页面。
        \n第3招：点击视频右上角下拉箭头，切换至“纯音频”模式。
        \n第4招：点击视频右上角下拉箭头，选择“优选网络”，切换至其他网络服务商。</string>
    <string name="help_step3_title">3. 直播时为什么会有延迟现象？</string>
    <string name="help_step3">受制于不同的网络状况，直播期间有10秒左右的延迟属于正常现象哦！如果您很介意，那么建议更换到更稳定的WiFi网络中听课哦！</string>


</resources>
